--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
+    "uuid": "^10.0.0"
   }
 }
