--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
@@ -19,6 +20,7 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.14",
     "stripe": "^16.6.0",
     "uuid": "^10.0.0"
